--- a/styles/partials/_sections.scss
+++ b/styles/partials/_sections.scss
@@ -412,18 +412,19 @@
     height: 100px;
 }
 .contactHeaderImg {
-    width: 1600px;
-    height: 300px;
+    height: 225px;
     background-image: url(/assets/contact-1.jpeg);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     position: relative;
+    background-position: 10% 75%;
 }
 
 .contactPageWrapper {
     max-width: 1000px;
     position: relative;
-    top: -120px;
+    top: -55px;
+    margin-bottom: 50px;
     h2 {
         font-size: 3rem;
         font-weight: 800;
